# herndon

./: README.md  SPEC.md  pyproject.toml
demo/expenditures_project/.herndon/: config.json
demo/expenditures_project/.herndon/builds/expenses_2026/: expenses_2026.xlsx  manifest.json
demo/expenditures_project/.herndon/themes/: brand.json
demo/expenditures_project/workbooks/expenses_2026/: workbook.json
demo/expenditures_project/workbooks/expenses_2026/sheets/: 001-overview.json  002-stacked-mix.json  003-trend.json  004-histogram-bins.json
src/herndon/: cli.py  errors.py  inspection.py  models.py  project.py  renderer.py  utils.py  validation.py
tests/: test_cli.py  test_render.py
tests/fixtures/: inspect_workbook_expected.json
